--- a/resources/styles.css
+++ b/resources/styles.css
@@ -128,7 +128,7 @@
 }
 
 /*noinspection ALL*/
-#datetimePage{
+.datetimePage{
   y: 58%;
   x: 50%;
 }
@@ -171,6 +171,16 @@
 .statText{
   font-size: 20;
   text-anchor: start;
-  fill: black;
+  fill: #3D3D3D;
   y: 20%;
+}
+
+/*noinspection ALL*/
+#clickable {
+  x: 0;
+  y: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: visible;
+  opacity: 0;
 }
