--- a/resources/styles.css
+++ b/resources/styles.css
@@ -102,7 +102,7 @@
 }
 
 /*noinspection ALL*/
-#CPaneMain{
+.CPaneMain{
   width: 94%-4;
   height: 67%-4;
   x: 0%+2;
@@ -110,7 +110,7 @@
 }
 
 /*noinspection ALL*/
-#rectCPaneMain{
+.rectCPaneMain{
   fill: white;
   width: 94%-4;
   height: 67%-4;
@@ -119,7 +119,7 @@
 }
 
 /*noinspection ALL*/
-#rectCPaneBackground{
+.rectCPaneBackground{
   fill: #c9c9c9;
   width: 94%;
   height: 67%;
@@ -147,10 +147,6 @@
   text-anchor: middle;
   fill: black;
   y: 8%;
-}
-
-.zeroOpacity{
-  visibility: hidden;
 }
 
 /*noinspection ALL*/
